Nov 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add country statistics
- use an empty flag for countries without flag for proper alignment
- add "clear servers" menu item for master servers
- delete HL WON servers as they are switched off

Oct 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- UT2004 master server support, needs qstat from CVS

Oct 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add descent3 server listing from d3.descent.cx. Thanks Esa for providing a
  format suitable for XQF!

Oct 10, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Show UT200[34] mutators as tree like dmflags
- Add gslist master for RTCW

Oct 09, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Descent3: use Gamespy protocol instead of PXO protocol, remove no longer
  working masters, use custom launch function (uses --directip), fix saving of
  player info

Oct 04, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- fix segfault at doom3 version detection (reported by Steffen Pankratz)

Oct 02, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- automatically detect the doom3 network protocol version
- add support for Netpanzer (> 0.1.6). Thanks Matze Braun for the patch.

Sep 26, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add support for gslist. Thanks to Luigi Auriemma for making this
  possible!
- drop broken master servers, add some new ones for quake2
- update German translation
- version 1.0.0.2

Sep 12, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix UT99 master server listing
- Allow to completely overwrite the qstat master argument via config file

Aug 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Set default master protocol version for COD to 5

Aug 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Apply brightness correction to mapshots

Aug 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix usage of AC_ARG_ENABLE (#1010440). Thanks Mike Frysinger for reporting.

Aug 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>